[CAN-38] Fix: normalise club card sizes Problem Both the image size and the size of the card were varying across clubs, the inconsistency did not look nice Solution Thanks to this stackoverflow: https://stackoverflow.com/questions/77275607/how-to-make-images-same-size-next-image-component i managed to get it to work. Note Feel free to change the sizes of the cards and the images. We need to be wary that these are fixed and what will happen when content overflows. Still need to test on multiple device sizes.

--- a/app/[locale]/clubs/ClubCard.module.css
+++ b/app/[locale]/clubs/ClubCard.module.css
@@ -9,10 +9,12 @@
   
   .card {
     width: 300px;
+    height: 400px;
     border: 1px solid #ccc;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    object-fit: contain;
   }
   
   .cardNumber {
@@ -21,8 +23,8 @@
   }
   
   .cardImage {
-    max-width: 100%;
-    max-height: 100%;
+    width: 150px;
+    height: 150px;
     object-fit: contain;
     padding: 5px;
   }
